--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <span></span>
           <span></span>
         </div>
-        <h1 id="clock">00:00:00</h1>
+        <h1 id="clock">00 : 00 : 00</h1>
         <div class="miniBox1">
           <div id='calendar'></div>
         </div>
