달력 크기 고정 문제 고침

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <h1 id="clock">00 : 00 : 00</h1>
         <div class="miniBox1">
-          <div id='calendar'></div>
+          <div style="float: center; height : 500px; width : 400px;" id='calendar'></div>
         </div>
       </div>
       <div class="box2">
